<resources>
    <string name="app_name">Valorant Library</string>
    <string name="check_box_text">Lưu đăng nhập</string>
    <string name="nav_bo">Bộ</string>
    <string name="nav_cuahang">Cửa Hàng</string>
    <string name="nav_chodem">Chợ Đêm</string>
    <string name="nav_hoso">Hồ Sơ</string>
    <string name="nav_thuvien">Thư Viện</string>
    <string name="nav_caidat">Cài Đặt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
